--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "esm": "^3.2.25"
   },
   "scripts": {
-    "test": "npx mocha -r esm test/**/*.test.js"
+    "mocha": "npx mocha -r esm",
+    "test": "yarn mocha test/**/*.test.js"
   }
 }
