--- a/.github/workflows/nx-test.yml
+++ b/.github/workflows/nx-test.yml
@@ -2,9 +2,9 @@ name: Nx Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   test:
