init: create new python-exercise package

--- a/nx.json
+++ b/nx.json
@@ -24,6 +24,12 @@
           "watchDepsName": "watch-deps"
         }
       }
+    },
+    {
+      "plugin": "@nxlv/python",
+      "options": {
+        "packageManager": "uv"
+      }
     }
   ],
   "targetDefaults": {
