--- a/packages/ruby-exercises/Gemfile
+++ b/packages/ruby-exercises/Gemfile
@@ -7,3 +7,5 @@ git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 # gem "rails"
 
 gem "minitest", "~> 5.14"
+
+gem "railties", "~> 7.1"
