fix: reorganize project structure and update GitHub Actions workflows

--- a/.github/workflows/python-exercise-test.yml
+++ b/.github/workflows/python-exercise-test.yml
@@ -26,5 +26,8 @@ jobs:
     - name: Install dependencies
       run: pnpm install
       
+    - name: Install Python dependencies
+      run: pnpm dlx nx install python-exercise
+      
     - name: Run tests
       run: pnpm dlx nx test python-exercise
