--- a/.github/workflows/ruby-exercise-test.yml
+++ b/.github/workflows/ruby-exercise-test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v4
     
@@ -19,9 +19,20 @@ jobs:
         ruby-version: '3.2'
         bundler-cache: true
         
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: '10.8.1'
+
     - name: Install dependencies
+      run: pnpm install
+      
+    - name: Install Ruby dependencies
       run: bundle install
       working-directory: packages/ruby-exercises
+      
+    - name: Install Ruby dependencies with nx
+      run: pnpm dlx nx bundle ruby-exercise
       
     - name: Run tests
       run: pnpm dlx nx test ruby-exercise
