--- a/.github/workflows/python-exercise-test.yml
+++ b/.github/workflows/python-exercise-test.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Install dependencies
       run: pnpm install
       
+    - name: Install uv
+      run: pip install uv
+      
     - name: Install Python dependencies
       run: pnpm dlx nx install python-exercise
       
