chore: add README and disable test trigger if there's no code changes

--- a/.github/workflows/javascript-exercise-test.yml
+++ b/.github/workflows/javascript-exercise-test.yml
@@ -3,8 +3,12 @@ name: JavaScript Exercise Test
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'packages/javascript-exercise/**'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'packages/javascript-exercise/**'
 
 jobs:
   test:
