--- a/.github/workflows/ruby-exercise-test.yml
+++ b/.github/workflows/ruby-exercise-test.yml
@@ -3,8 +3,12 @@ name: Ruby Exercise Test
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'packages/ruby-exercise/**'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'packages/ruby-exercise/**'
 
 jobs:
   test:
