chore: enable test caching for all projects

--- a/nx.json
+++ b/nx.json
@@ -40,6 +40,9 @@
     "lint": {
       "inputs": ["default", "^default"],
       "cache": true
+    },
+    "test": {
+      "cache": true
     }
   }
 }
