--- a/.github/workflows/javascript-exercise-test.yml
+++ b/.github/workflows/javascript-exercise-test.yml
@@ -31,4 +31,4 @@ jobs:
       run: pnpm install
       
     - name: Run tests
-      run: pnpm dlx nx test javascript-exercise 
+      run: pnpm dlx nx test javascript-exercise --no-cloud
